--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,14 @@
 ---
 @charset "utf-8";
 
+@font-face{
+		font-family: irsans;
+		src: url(irsans.ttf);
+}
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: irsans;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
