--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,9 @@
 		font-family: irsans;
 		src: url(irsans.ttf);
 }
-
+* {
+	font-family: irsans!important;
+}
 
 // Our variables
 $base-font-family: irsans;
